8/11/2015
---------
-Merged in Lost Agent Detection
-"agents> remove X" now removes agents that checked in > X minutes ago

8/10/2015
---------
-Fixed tab completion of usestager module
-Added dependencies for Ubuntu 14.04
-Fixed IP Whitelisting set from file
-Added "Lost Agent Detection". Allows the ability for an agent to die after a certain number of missed checkins. This is implemented via the "lostlimit" command. Default set to 60 missed checkins. 

8/9/2015
----------
-Fixed flaw in crypto allowing a DOS condition. 
-Added authentication to the AES crypto scheme to verify integrity of messages

8/6/2015
-----------
-Initial release. All components released
-Commited path fix to correct bug in certain modules